@@ -1,3 +1,13 @@
+2020-09-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* geometry.tcl: The procedures [direction] and [octant] used an inconsistent definition of the direction (see https://core.tcl-lang.org/tcllib/tktview?name=fb4812f82b).
+	                The changes make the results consistent with the standard mathematical definition.
+	                Further change: return the common point for adjacent line segments.
+	* geometry.test: Added several tests wrt the above changes
+	* pkgIndex.tcl: Bumped the version of geometry to 1.4.0, as the changes above represent a minor incompatibility.
+	* geometry.man: Document these changes
+
+ore.tcl-lang.org/tcllib/tktview?name=7017dad214
+
 2020-04-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* primes.tcl: Correct the implementation of the totient function, as per https://core.tcl-lang.org/tcllib/tktview?name=7017dad214
 	* primes.test: Added a test case for the numbers 1 to 12 for the totient function
